# picket

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
resources/: config.ini  formats  picket.desktop
src/: colorpickerwindow.cpp  colorpickerwindow.h  formateditwindow.cpp  formateditwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  settingswindow.cpp  settingswindow.h
src/cfg/: config.cpp  config.h  paths.h.in
src/models/: color.cpp  color.h  colorformatmanager.cpp  colorformatmanager.h  historymanager.cpp  historymanager.h
src/utils/: colorspace.cpp  datautils.h  dirutils.h  drawinghelpers.cpp  enums.h  stringutils.cpp
ui/: ColorPickerWindow.glade  FormatEditWindow.glade  MainWindow.glade  SettingsWindow.glade
